[package]
name = "ifttt-webhook"
version = "0.3.2"
authors = ["Leo Dutra <leodutra.br@gmail.com>"]
edition = "2018"

description = "Simple async library for triggering IFTTT events using webhooks."
readme = "README.md"
keywords = ["ifttt", "webhook", "event", "trigger", "zapier"]
categories = ["api-bindings"]
repository = "https://github.com/leodutra/ifttt-webhook"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "macros"] }
